// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/private DELETE /:id - should delete 1`] = `[RepositoryEntityNotFoundError: Entity not found]`;

exports[`/private PATCH /:id - should update 1`] = `
Identity {
  "_address": Object {
    "country": "country",
    "locality": "locality",
    "postalCode": "postalCode",
    "region": "region",
    "streetAddress": "streetAddress",
  },
  "_birthDate": "2000-01-01",
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": Object {
    "name": "displayName",
    "number": 1234,
  },
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": Object {
          "country": "country",
          "locality": "locality",
          "postalCode": "postalCode",
          "region": "region",
          "streetAddress": "streetAddress",
        },
        "birthDate": "2000-01-01",
        "displayName": Object {
          "name": "displayName",
          "number": 1234,
        },
        "familyName": "familyName",
        "gender": "gender",
        "givenName": "givenName",
        "gravatar": "https://gravatar.url/",
        "locale": "sv-SE",
        "middleName": "middleName",
        "nickname": "nickname",
        "phoneNumber": "+46700000000",
        "phoneNumberVerified": true,
        "picture": "https://picture.url/",
        "preferredUsername": "preferredUsername",
        "profile": "https://profile.url/",
        "username": "username",
        "website": "https://website.url/",
        "zoneInfo": "Europe/Stockholm",
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_given_name_changed",
      "payload": Object {
        "givenName": "new-givenName",
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_middle_name_changed",
      "payload": Object {
        "middleName": "new-middleName",
      },
    },
  ],
  "_familyName": "familyName",
  "_gender": "gender",
  "_givenName": "new-givenName",
  "_gravatar": "https://gravatar.url/",
  "_id": "b24c6bfe-8e30-4f02-9c92-f7eca5c3b1b1",
  "_locale": "sv-SE",
  "_middleName": "new-middleName",
  "_nickname": "nickname",
  "_phoneNumber": "+46700000000",
  "_phoneNumberVerified": true,
  "_picture": "https://picture.url/",
  "_preferredUsername": "preferredUsername",
  "_profile": "https://profile.url/",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": "username",
  "_version": 1,
  "_website": "https://website.url/",
  "_zoneInfo": "Europe/Stockholm",
}
`;

exports[`/private PATCH /:id/address 1`] = `
Identity {
  "_address": Object {
    "country": "new-country",
    "locality": "new-locality",
    "postalCode": "new-postalCode",
    "region": "new-region",
    "streetAddress": "new-streetAddress",
  },
  "_birthDate": "2000-01-01",
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": Object {
    "name": "displayName",
    "number": 1234,
  },
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": Object {
          "country": "country",
          "locality": "locality",
          "postalCode": "postalCode",
          "region": "region",
          "streetAddress": "streetAddress",
        },
        "birthDate": "2000-01-01",
        "displayName": Object {
          "name": "displayName",
          "number": 1234,
        },
        "familyName": "familyName",
        "gender": "gender",
        "givenName": "givenName",
        "gravatar": "https://gravatar.url/",
        "locale": "sv-SE",
        "middleName": "middleName",
        "nickname": "nickname",
        "phoneNumber": "+46700000000",
        "phoneNumberVerified": true,
        "picture": "https://picture.url/",
        "preferredUsername": "preferredUsername",
        "profile": "https://profile.url/",
        "username": "username",
        "website": "https://website.url/",
        "zoneInfo": "Europe/Stockholm",
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_address_changed",
      "payload": Object {
        "address": Object {
          "country": "new-country",
          "locality": "new-locality",
          "postalCode": "new-postalCode",
          "region": "new-region",
          "streetAddress": "new-streetAddress",
        },
      },
    },
  ],
  "_familyName": "familyName",
  "_gender": "gender",
  "_givenName": "givenName",
  "_gravatar": "https://gravatar.url/",
  "_id": "b24c6bfe-8e30-4f02-9c92-f7eca5c3b1b1",
  "_locale": "sv-SE",
  "_middleName": "middleName",
  "_nickname": "nickname",
  "_phoneNumber": "+46700000000",
  "_phoneNumberVerified": true,
  "_picture": "https://picture.url/",
  "_preferredUsername": "preferredUsername",
  "_profile": "https://profile.url/",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": "username",
  "_version": 1,
  "_website": "https://website.url/",
  "_zoneInfo": "Europe/Stockholm",
}
`;

exports[`/private PATCH /:id/display-name 1`] = `
Identity {
  "_address": Object {
    "country": "country",
    "locality": "locality",
    "postalCode": "postalCode",
    "region": "region",
    "streetAddress": "streetAddress",
  },
  "_birthDate": "2000-01-01",
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": Object {
    "name": "displayName",
    "number": 1234,
  },
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": Object {
          "country": "country",
          "locality": "locality",
          "postalCode": "postalCode",
          "region": "region",
          "streetAddress": "streetAddress",
        },
        "birthDate": "2000-01-01",
        "displayName": Object {
          "name": "displayName",
          "number": 1234,
        },
        "familyName": "familyName",
        "gender": "gender",
        "givenName": "givenName",
        "gravatar": "https://gravatar.url/",
        "locale": "sv-SE",
        "middleName": "middleName",
        "nickname": "nickname",
        "phoneNumber": "+46700000000",
        "phoneNumberVerified": true,
        "picture": "https://picture.url/",
        "preferredUsername": "preferredUsername",
        "profile": "https://profile.url/",
        "username": "username",
        "website": "https://website.url/",
        "zoneInfo": "Europe/Stockholm",
      },
    },
  ],
  "_familyName": "familyName",
  "_gender": "gender",
  "_givenName": "givenName",
  "_gravatar": "https://gravatar.url/",
  "_id": "b24c6bfe-8e30-4f02-9c92-f7eca5c3b1b1",
  "_locale": "sv-SE",
  "_middleName": "middleName",
  "_nickname": "nickname",
  "_phoneNumber": "+46700000000",
  "_phoneNumberVerified": true,
  "_picture": "https://picture.url/",
  "_preferredUsername": "preferredUsername",
  "_profile": "https://profile.url/",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": "username",
  "_version": 0,
  "_website": "https://website.url/",
  "_zoneInfo": "Europe/Stockholm",
}
`;

exports[`/private PATCH /:id/username 1`] = `
Identity {
  "_address": Object {
    "country": "new-country",
    "locality": "new-locality",
    "postalCode": "new-postalCode",
    "region": "new-region",
    "streetAddress": "new-streetAddress",
  },
  "_birthDate": "2000-01-01",
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": Object {
    "name": "new-displayName",
    "number": 1234,
  },
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": Object {
          "country": "country",
          "locality": "locality",
          "postalCode": "postalCode",
          "region": "region",
          "streetAddress": "streetAddress",
        },
        "birthDate": "2000-01-01",
        "displayName": Object {
          "name": "displayName",
          "number": 1234,
        },
        "familyName": "familyName",
        "gender": "gender",
        "givenName": "givenName",
        "gravatar": "https://gravatar.url/",
        "locale": "sv-SE",
        "middleName": "middleName",
        "nickname": "nickname",
        "phoneNumber": "+46700000000",
        "phoneNumberVerified": true,
        "picture": "https://picture.url/",
        "preferredUsername": "preferredUsername",
        "profile": "https://profile.url/",
        "username": "username",
        "website": "https://website.url/",
        "zoneInfo": "Europe/Stockholm",
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_address_changed",
      "payload": Object {
        "address": Object {
          "country": "new-country",
          "locality": "new-locality",
          "postalCode": "new-postalCode",
          "region": "new-region",
          "streetAddress": "new-streetAddress",
        },
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_display_name_changed",
      "payload": Object {
        "displayName": Object {
          "name": "new-displayName",
          "number": 1234,
        },
      },
    },
  ],
  "_familyName": "familyName",
  "_gender": "gender",
  "_givenName": "givenName",
  "_gravatar": "https://gravatar.url/",
  "_id": "b24c6bfe-8e30-4f02-9c92-f7eca5c3b1b1",
  "_locale": "sv-SE",
  "_middleName": "middleName",
  "_nickname": "nickname",
  "_phoneNumber": "+46700000000",
  "_phoneNumberVerified": true,
  "_picture": "https://picture.url/",
  "_preferredUsername": "preferredUsername",
  "_profile": "https://profile.url/",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": "username",
  "_version": 2,
  "_website": "https://website.url/",
  "_zoneInfo": "Europe/Stockholm",
}
`;
